--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -4,15 +4,15 @@
 
     To get one, follow this link, follow the directions and press "Create" at the end:
 
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=83:EF:05:89:00:C4:27:68:A1:8D:32:EA:D4:AB:18:C6:B3:BD:BA:90%3Bcom.example.ulfa.itmaps
+    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=FD:F0:E9:91:91:A0:FF:F1:FB:77:42:9E:9B:56:E2:48:1F:3B:B1:37%3Bcom.example.ulfa.itmaps
 
     You can also add your credentials to an existing key, using these values:
 
     Package name:
-    83:EF:05:89:00:C4:27:68:A1:8D:32:EA:D4:AB:18:C6:B3:BD:BA:90
+    FD:F0:E9:91:91:A0:FF:F1:FB:77:42:9E:9B:56:E2:48:1F:3B:B1:37
 
     SHA-1 certificate fingerprint:
-    83:EF:05:89:00:C4:27:68:A1:8D:32:EA:D4:AB:18:C6:B3:BD:BA:90
+    FD:F0:E9:91:91:A0:FF:F1:FB:77:42:9E:9B:56:E2:48:1F:3B:B1:37
 
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
@@ -20,5 +20,7 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBzXSsxFO43Y5RV2BMbt1TuCIxBbt2yfAY</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
+AIzaSyCQngb1aHBVH-ee45a6y9UU5159u8s4cag
+</string>
 </resources>
