--- a/app/src/main/res/layout/user_massage.xml
+++ b/app/src/main/res/layout/user_massage.xml
@@ -17,17 +17,17 @@
 
     <TextView
         android:id="@+id/textContentUser"
-        android:layout_width="wrap_content"
+        android:layout_width="275dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="5dp"
+        android:layout_toStartOf="@id/imageView2"
         android:background="@drawable/rounded_corner1"
         android:padding="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@id/imageView2"
-        android:layout_marginEnd="5dp"
+        android:text="nama ruang"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_marginStart="20dp"
-        android:text="a"
         android:textColor="#ffffff" />
 
 </RelativeLayout>
